# agenticdoc2

./: .gitignore  README.md  context_draw.py  draw_alignment.py  graph.html  layout_draw.py  layput_draw.py  main.py  output.md  pipeline.py  pyproject.toml  retrieval_evaluation.py  run_alignment.py  run_extraction.py  run_faiss.py  run_hybrid.py  run_kg.py  run_layout.py  run_semantic.py  ui.py  visualize_graph.py
agents/: answer_generation_agent.py  document_extraction_agent.py  faiss_agent.py  hybrid_retrieval_engine.py  knowledge_graph_agent.py  layout_detection_agent.py  semantic_understanding_agent.py  temp.py
extractors/: figure_detector.py  heuristic_layout_detector.py  layout_models.py  ml_layout_detector.py  models.py  pdf_extractor.py  reading_order.py  text_layout_aligner.py  yolo_layout_detector.py
output/am/json/: extraction.json  layout.json  layout_semantic.json
output/eval/: retrieval_report.json
output/faiss/: metadata.json
output/graph/: graph.graphml  graph.json  graph.pkl
output/major_paper/json/: extraction.json  layout.json
output/multi_page/json/: extraction.json  layout.json
output/paper/json/: alignment.json  extraction.json  layout.json  layout_semantic.json
output/tmp98_84jkr/json/: extraction.json  layout.json
output/tmp_z_csm2q/json/: extraction.json  layout.json
tests/: test_document_extraction_agent.py  test_fixes.py  test_four_fixes.py  test_layout_detection_agent.py  test_semantic_understanding_agent.py
